--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,149 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+#HANGMAN project, crated by ROYE MELAMED
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+HANGMAN_ASCII_ART = r"""
+  _    _                                         
+ | |  | |                                        
+ | |__| | __ _ _ __   __ _ _ __ ___   __ _ _ __  
+ |  __  |/ _` | '_ \ / _` | '_ ` _ \ / _` | '_ \ 
+ | |  | | (_| | | | | (_| | | | | | | (_| | | | |
+ |_|  |_|\__,_|_| |_|\__, |_| |_| |_|\__,_|_| |_|
+                      __/ |                      
+                     |___/"""
+MAX_TRIES = 6
+HANGMAN_PHOTOS = {
+0: """
+x-------x""",
+1: """
+x-------x
+|
+|
+|
+|
+|""",
+2: """
+x-------x
+|       |
+|       0
+|
+|
+|""",
+3: """
+x-------x
+|       |
+|       0
+|       |
+|
+|""",
+4: """
+x-------x
+|       |
+|       0
+|      /|\ 
+|
+|""",
+5: """
+x-------x
+|       |
+|       0
+|      /|\ 
+|      /
+|""",
+6: """
+x-------x
+|       |
+|       0
+|      /|\ 
+|      / \ 
+|"""}
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+def open_screen():
+    print(HANGMAN_ASCII_ART, "\n", MAX_TRIES)
+    return None
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
 
-# Translations
-*.mo
-*.pot
+def choose_word(file_path, index):
+    with open(file_path, 'r') as words:
+        words_data = words.read()
+        words_list = words_data.split(' ')
+        if index > len(words_list):
+            index = 1
+        chosen_word = words_list[index - 1].replace('\n', '')
+        return chosen_word
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+def check_valid_input(letter_guessed, old_letters_guessed):
+    if letter_guessed.isalpha() and len(letter_guessed) == 1 and letter_guessed.lower() not in old_letters_guessed:
+        return True
+    else:
+        return False
 
-# Scrapy stuff:
-.scrapy
 
-# Sphinx documentation
-docs/_build/
+def try_update_letter_guessed(letter_guessed, old_letters_guessed, secret_word):
+    global num_of_tries
+    if not check_valid_input(letter_guessed, old_letters_guessed):
+        print('X')
+        old_letters_guessed.sort()
+        print(" -> ".join(old_letters_guessed))
+    else:
+        if letter_guessed.lower() not in secret_word:
+            old_letters_guessed.append(letter_guessed.lower())
+            num_of_tries += 1
+            print(':(')
+            print(print_status(num_of_tries))
+            print(show_hidden_word(secret_word, old_letters_guessed))
+        else:
+            old_letters_guessed.append(letter_guessed.lower())
+            print(show_hidden_word(secret_word, old_letters_guessed))
 
-# PyBuilder
-target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+def show_hidden_word(secret_word, old_letters_guessed):
+    currect_guess = ['']
+    for letter in secret_word:
+        if letter in old_letters_guessed:
+            currect_guess.append(letter + " ")
+        else:
+            currect_guess.append("_ ")
+        result = ''.join(currect_guess)
+    return result
 
-# IPython
-profile_default/
-ipython_config.py
 
-# pyenv
-.python-version
+def check_win(secret_word, old_letters_guessed):
+    if ''.join(show_hidden_word(secret_word, old_letters_guessed).split()) in secret_word:
+        print('YOU WIN!\nGOOD JOB!!!')
+        return True
+    return False
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
+def word_len(secret_word):
+    return '_ ' * len(secret_word)
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
 
-# SageMath parsed files
-*.sage.py
+def print_status(num_of_tries):
+    return (HANGMAN_PHOTOS[num_of_tries])
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+num_of_tries = 0
 
-# Rope project settings
-.ropeproject
 
-# mkdocs documentation
-/site
+def main():
+    open_screen()
+    global num_of_tries
+    secret_word = choose_word(input(r"Please enter file path: ").lower(), int(input(r"Please enter index: ")))
+    old_letters_guessed = []
+    print('Lets go!')
+    print(HANGMAN_PHOTOS[num_of_tries])
+    print(word_len(secret_word))
+    while num_of_tries < MAX_TRIES:
+        try_update_letter_guessed(input('Enter a letter: '), old_letters_guessed, secret_word)
+        show_hidden_word(secret_word, old_letters_guessed)
+        game_status = check_win(secret_word, old_letters_guessed)
+        if game_status:
+            break
+    if not game_status:
+        print('GAME OVER!')
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
 
-# Pyre type checker
-.pyre/
+if __name__ == "__main__":
+    main()
